test/expected/explain_fcv_v.out
explain void f(const void)
               ^
16: error: void as parameter can not be const
